@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.437 2005/10/24 21:31:18 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.438 2005/10/25 19:16:20 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIClientController.py:
+  added debugging code for the interaction between the 2 threads via Event()
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
